spacing fix on skills section as well as minor font size fixes on main BB

--- a/src/styles/output.css
+++ b/src/styles/output.css
@@ -2083,6 +2083,10 @@ video {
     margin-top: 4rem;
   }
 
+  .md\:mb-0 {
+    margin-bottom: 0px;
+  }
+
   .md\:block {
     display: block;
   }
@@ -2466,6 +2470,11 @@ video {
 
   .lg\:text-xl {
     font-size: 1.25rem;
+    line-height: 1.75rem;
+  }
+
+  .lg\:text-lg {
+    font-size: 1.125rem;
     line-height: 1.75rem;
   }
 }
